Mainly : JUnit 5 - Removes Spring Platform BOM - Fixes some issues with JSF primitive types